--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -29,4 +29,19 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+.search-box {
+  width: 30vw;
+}
+
+.app-logo {
+  width: 100%;
+  height: auto;
 }
